code done for retrieving datafrom database

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Current Train Schedule
         </div>
         <div class="card-body">
-            <table class=table>
+            <table id="train-table" class=table>
                 <thead>
                     <tr>
                         <th> Train Name </th>
