--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Train Schedule</h1>
-          <p class="lead">Information about all train routes.</p>
+          <h1 class="display-4" id="heading">Train Schedule</h1>
+          <p class="lead" id="caption">Information about all train routes.</p>
         </div>
-      </div>
+    </div>
 
 
     <div class="card">
